--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "lucianobragaweb-resume",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://lucianobragaweb.github.io/resume",
