--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lucianobragaweb-resume",
+  "name": "robsudev-resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lucianobragaweb.github.io/resume",
+  "homepage": "https://robsu17.github.io/resume",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
